--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@ background: linear-gradient(to right, #000000, #434343); /* W3C, IE 10+/ Edge, F
         padding: 15px;   
     }
     .fsocial a {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-right: 15px;
     }
     .fcontent-head {
         padding-top: 20px;
@@ -79,6 +78,8 @@ background: linear-gradient(to right, #000000, #434343); /* W3C, IE 10+/ Edge, F
     .fskill li {
         list-style: none;
     }
+
+
     .badge-default {
         background: #f39c12;
     }
@@ -101,13 +102,63 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
         box-shadow: 0 2px 10px 0 #95a5a6;
         border-radius: 0;
     }
+    .progress, .progress-bar {
+        height: 25px;
+        line-height: 25px;
+        border-radius: 0;
+        margin-bottom: 10px;
+        font-size: 15px;
+    }
+
+    .bg-fbs {
+        background: #674172;
+    }
+    .bg-fmat {
+        background: #E26A6A;
+    }
+    .bg-fang {
+        background: #e74c3c;
+    }
+    .bg-fweb {
+        background: #3498db;
+    }
+    .bg-flvel {
+        background: #E08283;
+    }
+    .bg-flum {
+        background: #F27935;
+    }
+    .bg-fdj {
+        background: #1E824C;
+    }
+
+    .panel-title {
+        margin: 0;
+        padding: 15px;
+        font-size: 20px;
+        background: #FFD200;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #F7971E, #FFD200);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    }
+    .panel-title a {
+        color: white;
+        display:block;
+    }
 
     @media (max-width: 300px) {
     }
 
     @media (max-width: 768px) {
+        .fsidebar {
+            height: 100%;
+            box-shadow: 0 0 white;
+        }
         .fhead {
-            height: 43vh;
+            height: 45vh;
+        }
+        .fhead img {
+            height: 28vh;
         }
         .ffooter {
             display: none;
@@ -116,6 +167,25 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
             width: 50%;
             padding-left: 5px;
             padding-right: 5px;
+        }
+        .panel-group {
+            display: block;
+        }
+        .list-groupm {
+            display: none;
+        }
+        .list-group-item.active {
+            border-left: 10px solid #34495e;
+
+        }
+    }
+
+    @media (min-width: 768px) {
+        .panel-group {
+            display: none;
+        }
+        .list-groupm {
+            display: block;
         }
     }
     </style>
@@ -131,14 +201,36 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
                 </div>
             </div>
 
-            <div class="fsocial">
+            <div class="fsocial text-center">
                 <a><i class="fa fa-facebook " aria-hidden="true"></i></a>
                 <a><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 <a><i class="fa fa-github" aria-hidden="true"></i></a>
                 <a><i class="fa fa-envelope" aria-hidden="true"></i></a>
             </div>
 
-            <ul class="list-group tabs">
+            <div class="panel-group">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                    <h4 class="panel-title">
+                        <a data-toggle="collapse" href="#collapse1">Menu</a>
+                    </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                    <ul class="list-group tabs">
+                        <a href="#tprofil" class="list-group-item list-group-item-action active panel-body"
+                        data-toggle="tab">Profil</a>
+                        <a href="#tkeahlian" class="list-group-item list-group-item-action panel-body"
+                        data-toggle="tab">Keahlian</a>
+                        <a href="#tportofolio" class="list-group-item list-group-item-action panel-body"
+                        data-toggle="tab">Portofolio</a>
+                        <a href="#tblog" class="list-group-item list-group-item-action panel-body"
+                        data-toggle="tab">Blog</a>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+
+            <ul class="list-group list-groupm tabs">
                 <a href="#tprofil" class="list-group-item list-group-item-action active"
                 data-toggle="tab">Profil</a>
                 <a href="#tkeahlian" class="list-group-item list-group-item-action"
@@ -190,7 +282,8 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
                                 <span class="badge badge-default">Javascript</span>
                             </p>
                             <p>Tools : </p>
-                            <ul class="list-group">
+  
+                            <!-- <ul class="list-group">
                                 <li class="list-group-item justify-content-between">
                                     Bootstrap
                                 <span class="badge badge-primary badge-pill">80%</span>
@@ -206,6 +299,32 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
                                 <li class="list-group-item justify-content-between">
                                     Webpack
                                 <span class="badge badge-primary badge-pill">80%</span>
+                                </li>
+                            </ul> -->
+
+                            <ul class="list-group">
+                                <li class="progress"> 
+                                    <div class="progress-bar bg-fbs" role="progressbar" 
+                                    style="width: 80%" aria-valuenow="80" aria-valuemin="0" 
+                                    aria-valuemax="100">Bootstrap</div>
+                                </li>
+
+                                <li class="progress"> 
+                                    <div class="progress-bar bg-fmat" role="progressbar" 
+                                    style="width: 80%" aria-valuenow="80" aria-valuemin="0" 
+                                    aria-valuemax="100">Materialize</div>
+                                </li>
+
+                                <li class="progress"> 
+                                    <div class="progress-bar bg-fang" role="progressbar" 
+                                    style="width: 75%" aria-valuenow="75" aria-valuemin="0" 
+                                    aria-valuemax="100">Angular2</div>
+                                </li>
+
+                                <li class="progress"> 
+                                    <div class="progress-bar bg-fweb" role="progressbar" 
+                                    style="width: 70%" aria-valuenow="70" aria-valuemin="0" 
+                                    aria-valuemax="100">Webpack</div>
                                 </li>
                             </ul>
                         </div>
@@ -226,19 +345,24 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
 
                                 <p>Tools : </p>
                                 <ul class="list-group">
-                                    <li class="list-group-item justify-content-between">
-                                        Laravel
-                                    <span class="badge badge-primary badge-pill">70%</span>
-                                    </li>
-                                    <li class="list-group-item justify-content-between">
-                                        Lumen
-                                    <span class="badge badge-primary badge-pill">70%</span>
-                                    </li>
-                                    <li class="list-group-item justify-content-between">
-                                    Django
-                                    <span class="badge badge-primary badge-pill">70%</span>
-                                    </li>
-                                </ul>
+                                        <li class="progress"> 
+                                            <div class="progress-bar bg-flvel" role="progressbar" 
+                                            style="width: 85%" aria-valuenow="85" aria-valuemin="0" 
+                                            aria-valuemax="100">Laravel</div>
+                                        </li>
+        
+                                        <li class="progress"> 
+                                            <div class="progress-bar bg-flum" role="progressbar" 
+                                            style="width: 80%" aria-valuenow="80" aria-valuemin="0" 
+                                            aria-valuemax="100">Lumen</div>
+                                        </li>
+        
+                                        <li class="progress"> 
+                                            <div class="progress-bar bg-fdj" role="progressbar" 
+                                            style="width: 80%" aria-valuenow="80" aria-valuemin="0" 
+                                            aria-valuemax="100">Django</div>
+                                        </li>
+                                    </ul>
                             </div>
                         </div>
                     </div>
@@ -255,6 +379,11 @@ background: linear-gradient(to right, #F7971E, #FFD200); /* W3C, IE 10+/ Edge, F
                             </p>
                             <p>Operating System : &emsp;
                                 <span class="badge badge-default">Ubuntu</span>
+                            </p>
+                            <p>Text Editor / IDE : &emsp;
+                                <span class="badge badge-default">Sublimetext</span>
+                                <span class="badge badge-default">VSCode</span>
+                                <span class="badge badge-default">Vim</span>
                             </p>
                         </div>
                     </div>
