--- a/index.html
+++ b/index.html
@@ -391,10 +391,7 @@
                                 <div class="card-footer text-muted">
                                     <span class="badge badge-pill badge-default">Laravel</span>
                                     <span class="badge badge-pill badge-default">Bootstrap</span>
-                                    <!-- <a href="https://github.com/fzrbbx/flvel-tokobaju" target="_blank">
-                                        <i class="fa fa-external-link float-right" aria-hidden="true"></i>
-                                    </a> -->
-                                    <a href="" onclick="alert('Ukuran keseluruhan file terlalu besar karena mencakup app toko dan admin panel (ref : https://help.github.com/articles/working-with-large-files) Bila berkenan hubungi saja melalui kontak yang tersedia. ');">
+                                    <a href="https://github.com/fzrbbx/flvel-tokobaju" target="_blank">
                                         <i class="fa fa-external-link float-right" aria-hidden="true"></i>
                                     </a>
                                 </div>
