--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                     </li>
 
                                     <li class="list-group-item justify-content-between">
-                                    Istana Robot &emsp;
+                                    Isee Robotic &emsp;
                                     <a>
                                         <span class="badge badge-default">Trainer Robotika</span>
                                         <span class="badge badge-default">6 bulan</span>
