--- a/index.html
+++ b/index.html
@@ -345,6 +345,25 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-md-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    Website FotografiSurabaya
+                                </div>
+                                <div class="card-block">
+                                    <p class="card-text">
+                                        <img src="./assets/img/fgsby-1.png" class="img-fluid" alt="">
+                                    </p>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <span class="badge badge-pill badge-default">Laravel</span>
+                                    <span class="badge badge-pill badge-default">Bootstrap</span>
+                                    <a data-toggle="modal" data-target="#modpor3"><i class="fa fa-eye float-right" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -617,6 +636,75 @@
             </div>
 
             <hr>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade bd-example-modal-lg" id="modpor3" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modelTitleId">Website FotografiSurabaya</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+            </div>
+
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Untuk : Iskak Photo
+                            <a class="float-right">
+                                <span class="badge badge-pill badge-success">Selesai</span>
+                            </a>
+                        </p>
+                        <p>Masa Kerja : 28 Sep - 7 Okt 2017 </p>
+
+                        <div id="carouselId1" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselId1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselId1" data-slide-to="1"></li>
+                            <li data-target="#carouselId1" data-slide-to="2"></li>
+                        </ol>
+
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img src="./assets/img/fgsby-1.png" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/img/fgsby-2.png" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/img/fgsby-3.png" alt="Third slide">
+                            </div>
+                        </div>
+
+                        <a class="carousel-control-prev" href="#carouselId1" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+
+                        <a class="carousel-control-next" href="#carouselId1" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        </div>
+                    </div>
+    
+                    <div class="col-md-6">
+                        <p>Demo : <a href="https://fotografisurabaya.com" 
+                        target="_blank">fotografisurabaya.com</a> </p>
+                        <p>Job Desk : </p>
+                        <div class="list-group">
+                            <small class="list-group-item">Desain front end dan admin panel.</small>
+                            <small class="list-group-item">Pembuatan galeri dan paket dinamis.</small>
+                        </div>
+                    </div>
+    
+                </div>
+
+                <hr>
             </div>
         </div>
     </div>
