--- a/index.html
+++ b/index.html
@@ -359,7 +359,27 @@
                                 <div class="card-footer text-muted">
                                     <span class="badge badge-pill badge-default">Laravel</span>
                                     <span class="badge badge-pill badge-default">Bootstrap</span>
+
                                     <a data-toggle="modal" data-target="#modpor3"><i class="fa fa-eye float-right" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-3">
+                            <div class="card">
+                                <div class="card-header">
+                                    ASIK-AI PLN Barabai
+                                </div>
+                                <div class="card-block">
+                                    <p class="card-text">
+                                        <img src="./assets/img/asik-ai-3.png" class="img-fluid" alt="">
+                                    </p>
+                                </div>
+                                <div class="card-footer text-muted">
+                                    <span class="badge badge-pill badge-default">Laravel</span>
+                                    <span class="badge badge-pill badge-default">Bootstrap</span>
+
+                                    <a data-toggle="modal" data-target="#modpor4"><i class="fa fa-eye float-right" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -590,11 +610,11 @@
                     </a></p>
                     <p>Masa Kerja : 11 - 15 Sep 2017 </p>
 
-                    <div id="carouselId3" class="carousel slide" data-ride="carousel">
+                    <div id="carouselId2" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
-                        <li data-target="#carouselId3" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselId3" data-slide-to="1"></li>
-                        <li data-target="#carouselId3" data-slide-to="2"></li>
+                        <li data-target="#carouselId2" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselId2" data-slide-to="1"></li>
+                        <li data-target="#carouselId2" data-slide-to="2"></li>
                     </ol>
 
                     <div class="carousel-inner" role="listbox">
@@ -609,12 +629,12 @@
                         </div>
                     </div>
 
-                    <a class="carousel-control-prev" href="#carouselId3" role="button" data-slide="prev">
+                    <a class="carousel-control-prev" href="#carouselId2" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
 
-                    <a class="carousel-control-next" href="#carouselId3" role="button" data-slide="next">
+                    <a class="carousel-control-next" href="#carouselId2" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
@@ -661,11 +681,11 @@
                         </p>
                         <p>Masa Kerja : 28 Sep - 7 Okt 2017 </p>
 
-                        <div id="carouselId1" class="carousel slide" data-ride="carousel">
+                        <div id="carouselId3" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li data-target="#carouselId1" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselId1" data-slide-to="1"></li>
-                            <li data-target="#carouselId1" data-slide-to="2"></li>
+                            <li data-target="#carouselId3" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselId3" data-slide-to="1"></li>
+                            <li data-target="#carouselId3" data-slide-to="2"></li>
                         </ol>
 
                         <div class="carousel-inner" role="listbox">
@@ -680,12 +700,12 @@
                             </div>
                         </div>
 
-                        <a class="carousel-control-prev" href="#carouselId1" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#carouselId3" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
 
-                        <a class="carousel-control-next" href="#carouselId1" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#carouselId3" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -709,6 +729,79 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade bd-example-modal-lg" id="modpor4" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modelTitleId">Aplikasi Sistem Informasi Kontrak - Anggaran Investasi</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+            </div>
+
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Untuk : PLN Area Barabai
+                            <a class="float-right">
+                                <span class="badge badge-pill badge-info">On Progress</span>
+                            </a>
+                        </p>
+                        <p>Masa Kerja : - </p>
+
+                        <div id="carouselId4" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselId4" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselId4" data-slide-to="1"></li>
+                            <li data-target="#carouselId4" data-slide-to="2"></li>
+                        </ol>
+
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active">
+                                <img src="./assets/img/asik-ai-1.png" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/img/asik-ai-2.png" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/img/asik-ai-3.png" alt="Third slide">
+                            </div>
+                        </div>
+
+                        <a class="carousel-control-prev" href="#carouselId4" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+
+                        <a class="carousel-control-next" href="#carouselId4" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                        </div>
+                    </div>
+    
+                    <div class="col-md-6">
+                        <p>Demo : <a href="#" 
+                        target="_blank">-</a> </p>
+                        <p>Job Desk : </p>
+                        <div class="list-group">
+                            <small class="list-group-item">Analisa proses bisnis.</small>
+                            <small class="list-group-item">Perancangan skema database.</small>
+                            <small class="list-group-item">Desain front end dan admin panel.</small>
+                            <small class="list-group-item">Penambahan fitur.</small>
+                            <small class="list-group-item">Integrasi Sistem.</small>
+                        </div>
+                    </div>
+    
+                </div>
+
+                <hr>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- EndModal -->
 <script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script> 
